[gd_scene load_steps=8 format=3 uid="uid://cufag0jre3eth"]

[ext_resource type="PackedScene" uid="uid://do6ouwg4q84aj" path="res://Objects/effect.tscn" id="1_onee4"]
[ext_resource type="Script" path="res://Script/Effects/Effect_paddle_boost.gd" id="2_3wtmu"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ua3sp"]
shading_mode = 0
albedo_color = Color(1, 0.642304, 0.437836, 1)

[sub_resource type="SphereMesh" id="SphereMesh_sr4pe"]
material = SubResource("StandardMaterial3D_ua3sp")
radial_segments = 6
rings = 4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4qka4"]
shading_mode = 0
albedo_color = Color(1, 0.752535, 0.661725, 1)

[sub_resource type="BoxMesh" id="BoxMesh_mvsxg"]
material = SubResource("StandardMaterial3D_4qka4")

[sub_resource type="Curve" id="Curve_i5k3b"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.109023, 1), 0.0, 0.0, 0, 0, Vector2(0.530075, 0.505435), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[node name="Effect" instance=ExtResource("1_onee4")]
script = ExtResource("2_3wtmu")

[node name="Model" type="MeshInstance3D" parent="." index="0"]
transform = Transform3D(0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 0, 0, 0)
mesh = SubResource("SphereMesh_sr4pe")
skeleton = NodePath("")

[node name="ParticlesHit" type="CPUParticles3D" parent="." index="1"]
emitting = false
one_shot = true
explosiveness = 1.0
lifetime_randomness = 1.0
mesh = SubResource("BoxMesh_mvsxg")
emission_shape = 2
emission_sphere_radius = 0.5
direction = Vector3(0, 1, 0)
spread = 0.0
gravity = Vector3(0, 0, 0)
initial_velocity_max = 1.0
scale_amount_min = 0.2
scale_amount_max = 0.4
scale_amount_curve = SubResource("Curve_i5k3b")

[connection signal="applied" from="." to="." method="_on_applied"]
[connection signal="cleared" from="." to="." method="_on_cleared"]
[connection signal="hidden" from="." to="." method="_on_hidden"]
[connection signal="shown" from="." to="." method="_on_shown"]
